--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   background: #eee;
   font-family: sans-serif;
@@ -16,14 +12,14 @@ body {
 
 .title {
   background: #e3f4ff;
-  margin: 8px;
+  margin-bottom: 8px;
   font-size: 16px;
   padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 8px;
+  margin-bottom: 8px;
   padding-top: 16px;
   padding-bottom: 16px;
   padding-left: 8px;
@@ -32,7 +28,6 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  margin: 8px;
   text-align: center;
   padding: 8px;
 }
