--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,6 +3,12 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* can use align-content: center; here to center the div
+  without using flex */
 }
 
 .box {
@@ -12,4 +18,6 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  
+  /* can use margin: auto; here to center the div without using flex */
 }
